collectd (5.5.0-4) UNRELEASED; urgency=medium

  * debian/collectd-core.overrides:
    - Update 'binary-or-shlib-defines-rpath' lintian override.
  * debian/rules:
    - Strip out non-deterministic bits out of generated jar files.

 -- Marc Fournier <marc@bl.uem.li>  Tue, 06 Oct 2015 21:27:57 +0200

collectd (5.5.0-3) unstable; urgency=medium

  * debian/rules, debian/control:
    - Avoid hiding compiler options at build time, allowing the buildd log
      scanner to do it's job.
    - Disable smart plugin on non-linux platforms, due to missing
      libatasmart-dev build-dependency.
  * debian/collectd-core.overrides:
    - Update 'capitalization-error-in-description' lintian override.
  * debian/rules, debian/collectd-core.collectd.service:
    - Rename systemd service file to collectd-core.collectd.service, to honour
      debhelper's naming convention.
  * debian/collectd-core.collectd.service:
    - Check for configuration file presence before starting the daemon.
    - Check for configuration file validity before starting the daemon.
  * debian/control, debian/changelog:
    - Update my email address to match identity of current GPG key.

 -- Marc Fournier <marc@bl.uem.li>  Sun, 13 Sep 2015 21:42:53 +0200

collectd (5.5.0-2) unstable; urgency=low

  * debian/rules:
    - Disable the turbostat plugin on !amd64,!i386; it's Intel-hardware
      specific.

 -- Sebastian Harl <tokkee@debian.org>  Sun, 23 Aug 2015 15:35:26 +0200

collectd (5.5.0-1) unstable; urgency=medium

  [ Marc Fournier ]
  * New upstream release:
    - Battery plugin now prefers sysfs over (the deprecated) procfs for
      reading values; thanks to Witold Baryluk for reporting this
      (Closes: #630337).
    - The configuration supports unquoted IPv6 addresses now; thanks to Geoff
      Crompton for reporting this (Closes: #632713).
    - Fixed a FTBFS using clang; thanks to Arthur Marble for reporting this
      and providing a patch (Closes: #758481).