@@ -4,6 +4,7 @@ collectd (5.5.0-4) UNRELEASED; urgency=medium
     - Update 'binary-or-shlib-defines-rpath' lintian override.
   * debian/rules:
     - Strip out non-deterministic bits out of generated jar files.
+    - Remove RTLD_GLOBAL workaround, which was fixed upstream.
 
  -- Marc Fournier <marc@bl.uem.li>  Tue, 06 Oct 2015 21:27:57 +0200
 
